--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,7 @@ body {
   }
 
   .container {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
   }
 
@@ -338,6 +338,7 @@ div.backtotopbutton {
           }
           div {
             ul {
+              margin-right: 10px;
               width: 50%;
             }
           }
@@ -367,6 +368,7 @@ div.backtotopbutton {
             div {
               justify-content: space-between;
               margin: 20px 0px;
+              flex-direction: column;
               ul {
                 li {
                   i {
@@ -483,7 +485,7 @@ div.backtotopbutton {
           }
 
           div {
-            justify-content: space-around;
+            justify-content: space-between;
             margin: 20px 0px;
             ul {
               li {
