--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,7 @@ body {
 
   .container {
     width: 90%;
+    max-width: 1920px;
     margin: 0 auto;
   }
 
@@ -148,7 +149,7 @@ nav {
   div {
     margin: 40px 0px;
     hr {
-      width: 140px;
+      width: 90px;
       margin: 0px 10px;
       height: 1px;
       background-color: var(--hl-col);
@@ -164,6 +165,10 @@ div.backtotopbutton {
   position: fixed;
   bottom: 2rem;
   right: 1rem;
+  z-index: 9;
+  padding: 1px;
+  background-color: #f0f7ee;
+  border-radius: 50%;
   i {
     font-size: 2rem;
   }
@@ -490,7 +495,7 @@ div.backtotopbutton {
             ul {
               li {
                 i {
-                  width: 20px;
+                  width: 40px;
                 }
               }
             }
