--- a/style.css
+++ b/style.css
@@ -63,6 +63,12 @@ body .glassbg {
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
 }
+body .hidden {
+  display: none;
+}
+body .block {
+  display: block;
+}
 body button.button {
   padding: 0.35rem 0.5rem;
   justify-self: flex-end;
@@ -83,7 +89,7 @@ body .lightbg {
 }
 
 nav {
-  padding: 1rem;
+  padding: 0.7rem;
   position: fixed;
   top: 0;
   left: 50%;
@@ -245,68 +251,159 @@ div.backtotopbutton i {
     min-height: 60vh;
     background-size: auto;
   }
-  section.strip div.container {
+  #bindex section.strip div.container {
     flex-direction: column;
   }
-  section.strip div.container figure i {
+  #bindex section.strip div.container figure i {
     margin-right: 1.75rem;
   }
-  main section.featured div.listing-item {
+  #bindex main section.featured div.listing-item {
     margin-top: 20px;
     flex-direction: column;
   }
-  main section.featured div.listing-item div.listing-title {
+  #bindex main section.featured div.listing-item div.listing-title {
     height: 400px;
     width: 100%;
   }
-  main section.featured div.listing-item div.listing-title ul li {
+  #bindex main section.featured div.listing-item div.listing-title ul li {
     margin: 4px 0px;
     font-size: 1rem;
   }
-  main section.featured div.listing-item div.listing-detail {
+  #bindex main section.featured div.listing-item div.listing-detail {
     padding: 30px;
   }
-  main section.featured div.listing-item div.listing-detail h3 {
+  #bindex main section.featured div.listing-item div.listing-detail h3 {
     margin-bottom: 10px;
   }
-  main section.featured div.listing-item div.listing-detail div ul {
+  #bindex main section.featured div.listing-item div.listing-detail div ul {
     margin-right: 10px;
     width: 50%;
   }
-  main section.featured div.listing-card {
+  #bindex main section.featured div.listing-card {
     margin: 20px 0px 0px;
     width: 100%;
     flex-direction: column;
   }
-  main section.featured div.listing-card figure {
+  #bindex main section.featured div.listing-card figure {
     margin: 0px 0px 20px;
   }
-  main section.featured div.listing-card figure img {
+  #bindex main section.featured div.listing-card figure img {
     width: 50%;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  main section.featured div.listing-card figure figcaption {
+  #bindex main section.featured div.listing-card figure figcaption {
     width: 50%;
     padding: 30px;
     font-family: var(--font-golos);
     line-height: 1.5;
   }
-  main section.featured div.listing-card figure figcaption li.sublist-item {
+  #bindex main section.featured div.listing-card figure figcaption li.sublist-item {
     font-size: 0.75rem;
     opacity: 0.85;
   }
-  main section.featured div.listing-card figure figcaption div {
+  #bindex main section.featured div.listing-card figure figcaption div {
     justify-content: space-between;
     margin: 20px 0px;
     flex-direction: column;
   }
-  main section.featured div.listing-card figure figcaption div ul li i {
+  #bindex main section.featured div.listing-card figure figcaption div ul li i {
     width: 30px;
   }
-  main section.featured div.listing-card figure figcaption button.button {
+  #bindex main section.featured div.listing-card figure figcaption button.button {
     align-self: flex-end;
     justify-self: flex-end;
+  }
+  #bcontact {
+    background: url(img/encuentra.jpg);
+  }
+  #bcontact h1 {
+    font-family: var(--font-golos);
+    text-align: center;
+    color: #fecb54;
+    text-transform: uppercase;
+  }
+  #bcontact header {
+    margin-top: 20%;
+    display: grid;
+    place-content: center;
+  }
+  #bcontact main {
+    padding: 20px;
+  }
+  #bcontact main fieldset {
+    padding: 5px 20px 10px;
+    background-color: whitesmoke;
+  }
+  #bcontact main fieldset legend,
+  #bcontact main fieldset label,
+  #bcontact main fieldset input,
+  #bcontact main fieldset option,
+  #bcontact main fieldset select,
+  #bcontact main fieldset textarea {
+    font-family: var(--font-manrope);
+    background-color: rgba(240, 247, 238, 0.5);
+  }
+  #bcontact main fieldset legend {
+    background-color: transparent;
+  }
+  #bcontact main fieldset label,
+  #bcontact main fieldset legend {
+    font-weight: 600;
+    margin: 6px 4px;
+  }
+  #bcontact main fieldset div.input-control {
+    margin: 0.25rem 0rem;
+  }
+  #bcontact main fieldset div.input-control input,
+  #bcontact main fieldset div.input-control textarea,
+  #bcontact main fieldset div.input-control select {
+    width: 100%;
+    padding: 0.25rem;
+    resize: none;
+    border: 1px solid #003554;
+  }
+  #bcontact main fieldset button.button {
+    margin: 20px 0px 10px;
+  }
+  #bcontact main fieldset.radio div.input-control div {
+    margin: 0px 10px;
+  }
+  #bcontact main fieldset.radio div.input-control div input[type=radio] {
+    scale: 1;
+  }
+  #bcontact section.FAQ {
+    background-color: #f0f7ee;
+    padding: 20px 10px;
+  }
+  #bcontact section.FAQ h2 {
+    font-family: var(--font-golos);
+    text-align: center;
+  }
+  #bcontact section.FAQ ul,
+  #bcontact section.FAQ h2 {
+    margin: 0px 0px 20px;
+  }
+  #bcontact section.FAQ ul li,
+  #bcontact section.FAQ h2 li {
+    font-size: 1.25rem;
+    font-family: var(--font-roboto);
+    margin: 16px 0px;
+  }
+  #bcontact section.FAQ ul li span,
+  #bcontact section.FAQ h2 li span {
+    text-decoration: underline;
+    text-align: right;
+    color: var(--link-col);
+    font-family: var(--font-merriweather);
+    font-size: 65%;
+    font-style: italic;
+    font-weight: 600;
+  }
+  #bcontact section.FAQ ul li p,
+  #bcontact section.FAQ h2 li p {
+    font-size: 1rem;
+    padding: 10px;
   }
 }
 @media screen and (min-width: 720px) {
@@ -332,69 +429,69 @@ div.backtotopbutton i {
   #bindex header h2 {
     margin-top: 60px;
   }
-  section.strip figure {
+  #bindex section.strip figure {
     flex-direction: column;
   }
-  section.strip figure i {
+  #bindex section.strip figure i {
     margin-bottom: 40px;
   }
-  main section.featured div.listing-item {
+  #bindex main section.featured div.listing-item {
     flex-direction: row;
     margin-top: 20px;
   }
-  main section.featured div.listing-item div.listing-title {
+  #bindex main section.featured div.listing-item div.listing-title {
     width: 60%;
   }
-  main section.featured div.listing-item div.listing-title ul li {
+  #bindex main section.featured div.listing-item div.listing-title ul li {
     margin: 4px 0px;
     font-size: 1rem;
   }
-  main section.featured div.listing-item div.listing-detail {
+  #bindex main section.featured div.listing-item div.listing-detail {
     margin-top: 20px;
     width: 40%;
     padding: 40px;
   }
-  main section.featured div.listing-item div.listing-detail h3 {
+  #bindex main section.featured div.listing-item div.listing-detail h3 {
     margin-bottom: 10px;
   }
-  main section.featured div.listing-item div.listing-detail div ul {
+  #bindex main section.featured div.listing-item div.listing-detail div ul {
     width: 50%;
   }
-  main section.featured div.listing-card {
+  #bindex main section.featured div.listing-card {
     margin: 20px 0px;
     width: 100%;
     flex-direction: row;
   }
-  main section.featured div.listing-card figure:nth-child(2) {
+  #bindex main section.featured div.listing-card figure:nth-child(2) {
     margin: 0px 20px;
   }
-  main section.featured div.listing-card figure {
+  #bindex main section.featured div.listing-card figure {
     flex-direction: column;
     justify-content: space-between;
   }
-  main section.featured div.listing-card img {
+  #bindex main section.featured div.listing-card img {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  main section.featured div.listing-card figcaption {
+  #bindex main section.featured div.listing-card figcaption {
     width: 80%;
     padding: 30px;
     font-family: var(--font-golos);
     line-height: 1.5;
   }
-  main section.featured div.listing-card figcaption li.sublist-item {
+  #bindex main section.featured div.listing-card figcaption li.sublist-item {
     font-size: 0.75rem;
     opacity: 0.85;
   }
-  main section.featured div.listing-card figcaption div {
+  #bindex main section.featured div.listing-card figcaption div {
     justify-content: space-between;
     margin: 20px 0px;
   }
-  main section.featured div.listing-card figcaption div ul li i {
+  #bindex main section.featured div.listing-card figcaption div ul li i {
     width: 40px;
   }
-  main section.featured div.listing-card figcaption button.button {
+  #bindex main section.featured div.listing-card figcaption button.button {
     align-self: flex-end;
     justify-self: flex-end;
   }
