--- a/style.scss
+++ b/style.scss
@@ -81,6 +81,14 @@ body {
     backdrop-filter: blur(20px);
   }
 
+  .hidden {
+    display: none;
+  }
+
+  .block {
+    display: block;
+  }
+
   button.button {
     padding: 0.35rem 0.5rem;
     justify-self: flex-end;
@@ -106,7 +114,7 @@ body {
 // Universal styling / styles both desktop and mobile
 
 nav {
-  padding: 1rem;
+  padding: 0.7rem;
   position: fixed;
   top: 0;
   left: 50%;
@@ -304,88 +312,194 @@ div.backtotopbutton {
     }
   }
 
-  #bindex header {
-    min-height: 60vh;
-    background-size: auto;
-  }
+  #bindex {
+    header {
+      min-height: 60vh;
+      background-size: auto;
+    }
 
-  section.strip {
-    div.container {
-      flex-direction: column;
-      figure {
-        i {
-          margin-right: 1.75rem;
+    section.strip {
+      div.container {
+        flex-direction: column;
+        figure {
+          i {
+            margin-right: 1.75rem;
+          }
+        }
+      }
+    }
+
+    main {
+      section.featured {
+        div.listing-item {
+          margin-top: 20px;
+          flex-direction: column;
+          div.listing-title {
+            height: 400px;
+            width: 100%;
+            ul {
+              li {
+                margin: 4px 0px;
+                font-size: 1rem;
+              }
+            }
+          }
+
+          div.listing-detail {
+            padding: 30px;
+            h3 {
+              margin-bottom: 10px;
+            }
+            div {
+              ul {
+                margin-right: 10px;
+                width: 50%;
+              }
+            }
+          }
+        }
+
+        div.listing-card {
+          margin: 20px 0px 0px;
+          width: 100%;
+          flex-direction: column;
+          figure {
+            margin: 0px 0px 20px;
+            img {
+              width: 50%;
+              object-fit: cover;
+            }
+            figcaption {
+              width: 50%;
+              padding: 30px;
+              font-family: var(--font-golos);
+              line-height: 1.5;
+              li.sublist-item {
+                font-size: 0.75rem;
+                opacity: 0.85;
+              }
+
+              div {
+                justify-content: space-between;
+                margin: 20px 0px;
+                flex-direction: column;
+                ul {
+                  li {
+                    i {
+                      width: 30px;
+                    }
+                  }
+                }
+              }
+              button.button {
+                align-self: flex-end;
+                justify-self: flex-end;
+              }
+            }
+          }
         }
       }
     }
   }
 
-  main {
-    section.featured {
-      div.listing-item {
-        margin-top: 20px;
-        flex-direction: column;
-        div.listing-title {
-          height: 400px;
-          width: 100%;
-          ul {
-            li {
-              margin: 4px 0px;
-              font-size: 1rem;
-            }
+  #bcontact {
+    background: url(img/encuentra.jpg);
+    h1 {
+      font-family: var(--font-golos);
+      text-align: center;
+      color: #fecb54;
+      text-transform: uppercase;
+    }
+
+    header {
+      margin-top: 20%;
+      display: grid;
+      place-content: center;
+    }
+
+    main {
+      padding: 20px;
+
+      fieldset {
+        padding: 5px 20px 10px;
+        background-color: whitesmoke;
+
+        legend,
+        label,
+        input,
+        option,
+        select,
+        textarea {
+          font-family: var(--font-manrope);
+          background-color: rgba($color: #f0f7ee, $alpha: 0.5);
+        }
+
+        legend {
+          background-color: transparent;
+        }
+
+        label,
+        legend {
+          font-weight: 600;
+          margin: 6px 4px;
+        }
+
+        div.input-control {
+          margin: 0.25rem 0rem;
+          input,
+          textarea,
+          select {
+            width: 100%;
+            padding: 0.25rem;
+            resize: none;
+            border: 1px solid #003554;
           }
         }
 
-        div.listing-detail {
-          padding: 30px;
-          h3 {
-            margin-bottom: 10px;
-          }
+        button.button {
+          margin: 20px 0px 10px;
+        }
+      }
+
+      fieldset.radio {
+        div.input-control {
           div {
-            ul {
-              margin-right: 10px;
-              width: 50%;
+            margin: 0px 10px;
+            input[type="radio"] {
+              scale: 1;
             }
           }
         }
       }
+    }
 
-      div.listing-card {
-        margin: 20px 0px 0px;
-        width: 100%;
-        flex-direction: column;
-        figure {
-          margin: 0px 0px 20px;
-          img {
-            width: 50%;
-            object-fit: cover;
+    section.FAQ {
+      background-color: #f0f7ee;
+      padding: 20px 10px;
+      h2 {
+        font-family: var(--font-golos);
+        text-align: center;
+      }
+
+      ul,
+      h2 {
+        margin: 0px 0px 20px;
+        li {
+          font-size: 1.25rem;
+          font-family: var(--font-roboto);
+          margin: 16px 0px;
+          span {
+            text-decoration: underline;
+            text-align: right;
+            color: var(--link-col);
+            font-family: var(--font-merriweather);
+            font-size: 65%;
+            font-style: italic;
+            font-weight: 600;
           }
-          figcaption {
-            width: 50%;
-            padding: 30px;
-            font-family: var(--font-golos);
-            line-height: 1.5;
-            li.sublist-item {
-              font-size: 0.75rem;
-              opacity: 0.85;
-            }
-
-            div {
-              justify-content: space-between;
-              margin: 20px 0px;
-              flex-direction: column;
-              ul {
-                li {
-                  i {
-                    width: 30px;
-                  }
-                }
-              }
-            }
-            button.button {
-              align-self: flex-end;
-              justify-self: flex-end;
-            }
+          p {
+            font-size: 1rem;
+            padding: 10px;
           }
         }
       }
@@ -415,94 +529,96 @@ div.backtotopbutton {
     }
   }
 
-  #bindex header {
-    min-height: 60vh;
-    background-size: auto;
-    h2 {
-      margin-top: 60px;
-    }
-  }
-
-  section.strip {
-    figure {
-      flex-direction: column;
-      i {
-        margin-bottom: 40px;
+  #bindex {
+    header {
+      min-height: 60vh;
+      background-size: auto;
+      h2 {
+        margin-top: 60px;
       }
     }
-  }
 
-  main {
-    section.featured {
-      div.listing-item {
-        flex-direction: row;
-        margin-top: 20px;
-        div.listing-title {
-          width: 60%;
-          ul {
-            li {
-              margin: 4px 0px;
-              font-size: 1rem;
-            }
-          }
+    section.strip {
+      figure {
+        flex-direction: column;
+        i {
+          margin-bottom: 40px;
         }
+      }
+    }
 
-        div.listing-detail {
+    main {
+      section.featured {
+        div.listing-item {
+          flex-direction: row;
           margin-top: 20px;
-          width: 40%;
-          padding: 40px;
-          h3 {
-            margin-bottom: 10px;
-          }
-          div {
-            ul {
-              width: 50%;
-            }
-          }
-        }
-      }
-
-      div.listing-card {
-        margin: 20px 0px;
-        width: 100%;
-        flex-direction: row;
-
-        figure:nth-child(2) {
-          margin: 0px 20px;
-        }
-
-        figure {
-          flex-direction: column;
-          justify-content: space-between;
-        }
-        img {
-          width: 100%;
-          object-fit: cover;
-        }
-        figcaption {
-          width: 80%;
-          padding: 30px;
-          font-family: var(--font-golos);
-          line-height: 1.5;
-          li.sublist-item {
-            font-size: 0.75rem;
-            opacity: 0.85;
-          }
-
-          div {
-            justify-content: space-between;
-            margin: 20px 0px;
+          div.listing-title {
+            width: 60%;
             ul {
               li {
-                i {
-                  width: 40px;
-                }
+                margin: 4px 0px;
+                font-size: 1rem;
               }
             }
           }
-          button.button {
-            align-self: flex-end;
-            justify-self: flex-end;
+
+          div.listing-detail {
+            margin-top: 20px;
+            width: 40%;
+            padding: 40px;
+            h3 {
+              margin-bottom: 10px;
+            }
+            div {
+              ul {
+                width: 50%;
+              }
+            }
+          }
+        }
+
+        div.listing-card {
+          margin: 20px 0px;
+          width: 100%;
+          flex-direction: row;
+
+          figure:nth-child(2) {
+            margin: 0px 20px;
+          }
+
+          figure {
+            flex-direction: column;
+            justify-content: space-between;
+          }
+          img {
+            width: 100%;
+            object-fit: cover;
+          }
+          figcaption {
+            width: 80%;
+            padding: 30px;
+            font-family: var(--font-golos);
+            line-height: 1.5;
+            li.sublist-item {
+              font-size: 0.75rem;
+              opacity: 0.85;
+            }
+
+            div {
+              justify-content: space-between;
+              margin: 20px 0px;
+              ul {
+                li {
+                  i {
+                    width: 40px;
+                  }
+                }
+              }
+            }
+            button.button {
+              align-self: flex-end;
+              justify-self: flex-end;
+            }
           }
         }
       }
