--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Golos+Text:wght@400;500;600;700;800;900&family=Josefin+Sans:wght@200;300;400;500;600;700&family=Lora:wght@400;500;600;700&family=Manrope:wght@200;300;400;500;600;700;800&family=Merriweather:wght@300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
-
 // global
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Golos+Text:wght@400;500;600;700;800;900&family=Josefin+Sans:wght@200;300;400;500;600;700&family=Lora:wght@400;500;600;700&family=Manrope:wght@200;300;400;500;600;700;800&family=Merriweather:wght@300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 * {
   list-style-type: none;
@@ -227,7 +226,7 @@ div.backtotopbutton {
 
   main {
     section.featured {
-      padding: 20px 0px;
+      padding: 20px 0px 0px;
       h2 {
         font-size: 2rem;
         font-family: var(--font-golos);
@@ -314,19 +313,9 @@ div.backtotopbutton {
 
   #bindex {
     header {
-      min-height: 60vh;
+      min-height: 50vh;
+      padding-top: 60px;
       background-size: auto;
-    }
-
-    section.strip {
-      div.container {
-        flex-direction: column;
-        figure {
-          i {
-            margin-right: 1.75rem;
-          }
-        }
-      }
     }
 
     main {
@@ -395,6 +384,156 @@ div.backtotopbutton {
                 align-self: flex-end;
                 justify-self: flex-end;
               }
+            }
+          }
+        }
+      }
+    }
+
+    section.strip {
+      margin-bottom: 20px;
+      div.container {
+        flex-direction: column;
+        figure {
+          i {
+            margin-right: 1.75rem;
+          }
+        }
+      }
+      a {
+        align-self: center;
+        margin-bottom: 10px;
+      }
+    }
+
+    section.blogpreview {
+      figure {
+        flex-direction: column;
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+        figcaption {
+          margin: 10px 0px;
+          h2,
+          h3 {
+            font-family: var(--font-merriweather);
+          }
+
+          h2 {
+            margin-top: 10px;
+          }
+
+          h3 {
+            padding: 10px;
+            opacity: 0.5;
+            font-size: 0.85rem;
+          }
+
+          p {
+            margin-top: 10px;
+            border-top: 1px solid var(--link-col);
+            padding-top: 20px;
+          }
+          a {
+            align-self: center;
+            margin: 20px auto;
+          }
+        }
+      }
+    }
+
+    footer {
+      width: 100%;
+      background-color: #2d3142;
+      flex-direction: column;
+      padding: 40px 0px;
+      div.brand-logo {
+        justify-content: center;
+        margin-top: 40px 0px 40px;
+        a {
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          img {
+            width: 100px;
+            margin: 0px 0px 20px;
+          }
+          h2 {
+            color: var(--hl-col);
+            font-size: 2rem;
+            text-transform: uppercase;
+            font-family: var(--font-josefin);
+            letter-spacing: 0.15rem;
+          }
+        }
+      }
+
+      div.nav-links {
+        flex-direction: column;
+        ul.business-info {
+          align-items: flex-start;
+          padding: 0px 10px;
+          margin: 20px 0px;
+        }
+
+        ul {
+          justify-content: center;
+          margin: 20px 0px;
+          li {
+            font-family: var(--font-montserrat);
+            color: var(--hl-col);
+            margin: 0px 6px;
+            text-align: center;
+          }
+        }
+      }
+
+      div.subscribe {
+        color: var(--hl-col);
+        font-family: var(--font-roboto);
+        font-size: 1rem;
+        padding: 20px;
+        margin-bottom: 40px;
+        label {
+          text-transform: uppercase;
+        }
+        div {
+          height: 40px;
+          margin: 10px 0px;
+          input {
+            width: 240px;
+            padding: 0px 10px;
+          }
+
+          button.button {
+            height: 36px;
+            margin: auto 10px;
+            background-color: var(--hl-col);
+            color: #003554;
+          }
+        }
+      }
+
+      div.social-media {
+        h3 {
+          color: var(--hl-col);
+          font-family: var(--font-montserrat);
+          font-weight: 400;
+          font-size: 0.75rem;
+          padding: 0px 20px;
+          margin: 20px 0px;
+        }
+        ul {
+          justify-content: center;
+          margin: 0px 0px 20px;
+
+          li {
+            i {
+              font-size: 1.5rem;
+              color: var(--hl-col);
+              text-align: center;
+              margin: 0px 10px;
             }
           }
         }
@@ -530,7 +669,7 @@ div.backtotopbutton {
 
   #bindex {
     header {
-      min-height: 60vh;
+      min-height: 40vh;
       background-size: auto;
       h2 {
         margin-top: 60px;
@@ -538,11 +677,16 @@ div.backtotopbutton {
     }
 
     section.strip {
+      flex-direction: column;
       figure {
         flex-direction: column;
         i {
           margin-bottom: 40px;
         }
+      }
+      a {
+        align-self: center;
+        margin: 0px 0px 20px;
       }
     }
 
@@ -622,18 +766,48 @@ div.backtotopbutton {
         }
       }
     }
-  }
 
-  main {
-    display: flex;
-    flex-direction: row;
+    section.blogpreview {
+      figure {
+        padding: 20px;
+        flex-direction: row;
+        img {
+          width: 60%;
+          object-fit: cover;
+          margin-right: 20px;
+        }
+        figcaption {
+          h2,
+          h3 {
+            font-family: var(--font-merriweather);
+          }
+
+          h3 {
+            padding: 10px;
+            opacity: 0.5;
+            font-size: 0.85rem;
+          }
+
+          p {
+            margin-top: 10px;
+            border-top: 1px solid var(--link-col);
+            padding-top: 20px;
+          }
+          a {
+            margin: 20px auto;
+          }
+        }
+      }
+    }
   }
 
   #bcontact {
-    background: url(img/encuentra.jpg);
-
     header {
-      margin: 90px 0px 20px;
+      background: url(img/encuentra.jpg);
+      background-size: cover;
+      background-position: center;
+      min-height: 20vh;
+      margin-bottom: 20px;
       display: grid;
       place-content: center;
       h1 {
@@ -709,7 +883,9 @@ div.backtotopbutton {
       section.FAQ {
         width: 50%;
         height: 100%;
-        background-color: #f0f7ee;
+        background-color: rgba($color: #f0f7ee, $alpha: 0.85);
+        backdrop-filter: blur(20px);
+
         padding: 20px 20px 52px;
         margin: 10px 40px 10px;
         h2 {
